# rust-scripts

./: Cargo.toml  LICENSE.txt  README.org  flake.nix
src/: main.rs
