[package]
name = "rust_scripts"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "pinch"
path = "src/bin/pinch.rs"

[[bin]]
name = "relay-mpv"
path = "src/bin/relay-mpv.rs"

[[bin]]
name = "record-pipewire"
path = "src/bin/record-pipewire.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
chrono = "0.4"
crossterm = "0.27"